--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==3.0.0
-flask-socketio==5.3.5
-python-socketio==5.10.0
-gunicorn==21.2.0
-eventlet==0.33.3
+flask==3.0.3
+flask-socketio==5.3.6
+eventlet>=0.33.3
+gunicorn==22.0.0
+setuptools>=68.0.0
